[gd_scene load_steps=4 format=2]

[ext_resource path="res://Textures/enemyUFO.png" type="Texture" id=1]
[ext_resource path="res://Enemy/Enemy.gd" type="Script" id=2]

[sub_resource type="CircleShape2D" id=1]
radius = 32.0156

[node name="Enemy" type="Area2D" groups=["damageable"]]
script = ExtResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
position = Vector2( 1, -1 )
scale = Vector2( 4.6, 4.6 )

[node name="FiringPositions" type="Node2D" parent="."]

[connection signal="area_entered" from="." to="." method="_on_Enemy_area_entered"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
